# LexiVault

./: .gitignore  README.md
compressor_service/: Cargo.toml
compressor_service/src/: main.rs  semantic.rs
lib_compressor/: Cargo.toml
lib_compressor/examples/: benchmark.rs  compare.rs
lib_compressor/src/: common.rs  engine.rs  integrity.rs  lib.rs
lib_compressor/tests/: integration_test.rs
my_compressor_driver/: Cargo.toml  my_compressor_driver.inx
my_compressor_driver/src/: lib.rs  ntfs.rs
