[package]
name = "lexivault_service"
version = "0.1.0"
edition = "2024"

[dependencies]
lexivault_lib = { path = "../lib_compressor" }
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-java = "0.20"
zstd = "0.13"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
notify = "6.1" # For filesystem watching

