[package]
name = "lexivault_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
zstd = { version = "0.13", default-features = false }
lz4-sys = { version = "1.9", default-features = false }
sha2 = { version = "0.10", default-features = false }
thiserror = { version = "2.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
bincode = { version = "1.3", default-features = false }
